--- a/src/styles/tabs/messenger/index.css
+++ b/src/styles/tabs/messenger/index.css
@@ -60,6 +60,9 @@
     flex-direction: row;
     background-color: transparent;
     gap: 7px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #div_conversation_user_name{
